GNOME Bugzilla – Bug 625846
SSL certificate check dialog triggers EAlert warning
Last modified: 2010-08-02 16:09:31 UTC
The code that triggers this is: /* The mail daemon won't have a window here, so there's nothing to set * as the parent */ user_message_dialog = e_alert_dialog_new_for_args (NULL, error_type, m->prompt, NULL); Can we call e_shell_get_default and then e_shell_get_active_window ? (evolution:3739): e-utils-WARNING **: Something called e_alert_dialog_constructed() with a NULL parent window. This is no longer legal, please fix it. Breakpoint 1, g_logv (log_domain=0x7f06462922b3 "e-utils", log_level=G_LOG_LEVEL_WARNING, format=0x7f06462922e8 "Something called %s() with a NULL parent window. This is no longer legal, please fix it.", args1=0x7fff8a8d66d0) at gmessages.c:430 430 gboolean was_fatal = (log_level & G_LOG_FLAG_FATAL) != 0; (gdb) bt
+ Trace 223086
Yeah, e_shell_get_active_window() would work here.
Created attachment 166991 [details] [review] Patch to grab window
Thanks Matthew, here's the patch.
Looks right, go ahead and commit.
All committed. Thanks!