mail-session: Use the shell's active window as parent for dialog

This means that when the mail session generates an EAlertDialog e.g. for SSL
certificate validity we can provide a parent window for the dialog.

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=625846